src/assets/sass/_layout.scss
// Layout
$susy: (
  columns: 12,
  gutters: 6.8/20.4,
  global-box-sizing: border-box,
  );

body.is--fixed { overflow: hidden; }

.wrap {
  @include container
}

main { margin-top: 1em; }

.panel {
  @include breakpoint($small) { height: 100vh; }
  @include breakpoint($medium) { margin-top: 1em; height: calc(100vh - 2em); }
  position: fixed;
  right   : 0;
  z-index : 800;
  width   : 0;
  transition: all .3s ease;

  &.is-active {
    @include breakpoint($small)  {
      width: 100%;
    }

    @include breakpoint($medium) {
      margin-right: ( 1/2 * gutters() );
      width: span(6);

      & ~ #topbar,
      & ~ #carousel,
      & ~ #menu,
      & ~ #poster,
      & ~ footer {
        @include span(6 of 12);
      }

      & ~ #topbar .branding-name { @include absoutly__hidden }
    }

    @include breakpoint($medium $bigger) {
      //margin-right: ( 1/2 * gutters() );
      width: span(6);

      & ~ #topbar,
      & ~ #carousel,
      & ~ #menu,
      & ~ #poster,
      & ~ footer {
        @include span(6 of 12);
      }

      & ~ #poster #pizza .group {
        @include span(4 of 6);
        @include squish(2);
      }

      & ~ #poster #meal .group {
        @include span(4 of 6);
        @include squish(2);
      }

      & ~ #poster #snack .group {
        @include span(4 of 6);
        @include squish(2);
      } 
    }

    @include breakpoint($big $bigger) {
      & ~ #poster #drink .category { @include full; }
    }

    @include breakpoint($bigger) {
      width: span(4);

      & ~ #topbar,
      & ~ #carousel,
      & ~ #menu,
      & ~ #poster,
      & ~ footer {
        @include span(8 of 12);
      }
    }

    @include breakpoint($bigger $display) {
      & ~ #poster #drink .category { @include full; }
    }

    @include breakpoint($bigger $widescreen) {
      & ~ #poster #meal .group {
        @include span(4);
        &:nth-of-type(2n+1) { @include last; @include post(1 wide); }
        &:nth-of-type(2n)   { @include break; @include pre(1 wide); }

        &.orphan:first-of-type {
          @include span(8 of 12);
          @include squish(2);
        }
      }

      & ~ #poster #snack .group {
        @include span(4);
        &:nth-of-type(2n+1) { @include break; @include pre(1 wide); }
        &:nth-of-type(2n)   { @include last; @include post(1 wide); }
      }

      & ~ #poster #drink .category {
        .category {
          @include span(5);
          @include squish(0.5);

          &:nth-of-type(3) { @include break; }
        }
      }
    }

    @include breakpoint($widescreen) {
      width: span(3);

      & ~ #topbar,
      & ~ #carousel,
      & ~ #menu,
      & ~ #poster,
      & ~ footer {
        @include span(9 of 12);
      }
    }
  }
}

#topbar {
  display : block;
  position: fixed;
  z-index : 900;
  height  : 5em;
  width   : 100%;
  padding : 0 span(1 wide);
  transition: all .3s ease;
}

#carousel {
  @include breakpoint($medium) { margin-bottom: -#{(42px+32px)/$rem_size}em }
  position: relative;
  width   : 100%;
  height  : 100vh;
  min-height: $min_cover_ht;
  transition: all .3s ease;
}

#menu {
  width: 100%;
  padding : 0 span(1 wide);
  transition: all .3s ease;
}

#poster {
  @include container;
  transition: all .3s ease;
}

footer {
  padding     : 1em;
  line-height : #{$row_height/$rem_size};
  color       : adjust-color($black, $alpha: -0.65);
  font-weight : 200;
  text-align  : center;
  //text-transform: capitalize;

  a:link { color: inherit; text-decoration: none; }
  a:hover{ color: $black; font-weight: bold; }
}

